--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
-.App {
-  text-align: center;
+/* body {
+  margin: 0;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+img {
+  width: 500px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#particles-js {
+  background: radial-gradient(circle, rgba(193, 196, 209, 1) 0%,
+  rgba(3, 3, 29, 1) 100%);
+  height: 100vh;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#welcome {
+  position: absolute;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 100vw;
+  height: 100vh;
 }
-
-.App-link {
-  color: #61dafb;
+.scale-in-center {
+  -webkit-animation: scale-in-center 1.5s cubic-bezier(0.250,
+  0.460, 0.450, 0.940) 1s both;
+  animation: scale-in-center 1.5s cubic-bezier(0.250, 0.460,
+  0.450, 0.940) 1s both;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@-webkit-keyframes scale-in-center {
+  0% {
+      -webkit-transform: scale(0);
+      transform: scale(0);
+      opacity: 1;
   }
-  to {
-    transform: rotate(360deg);
+  100% {
+      -webkit-transform: scale(1);
+      transform: scale(1);
+      opacity: 1;
   }
 }
+@keyframes scale-in-center {
+  0% {
+      -webkit-transform: scale(0);
+      transform: scale(0);
+      opacity: 1;
+  }
+  100% {
+      -webkit-transform: scale(1);
+      transform: scale(1);
+      opacity: 1;
+  }
+} */
