--- a/src/components/Background/style.css
+++ b/src/components/Background/style.css
@@ -6,6 +6,7 @@ body {
     background: radial-gradient(circle, rgba(193, 196, 209, 1) 0%,
     rgba(3, 3, 29, 1) 100%);
     height: 100vh;
+    z-index: 0;
   }
   #welcome {
     position: absolute;
