--- a/src/components/Background/style.css
+++ b/src/components/Background/style.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
   }
 
-  #particles-js {
+  #particles-js1 {
     background: radial-gradient(circle, rgba(193, 196, 209, 1) 0%,
     rgba(3, 3, 29, 1) 100%);
     height: 100vh;
