--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -9,3 +9,17 @@
 .navbar {
 z-index: 1;
 }
+
+.nav1{
+
+}
+
+.nav2{
+  display: none;
+  width: 100%;
+}
+
+@media (max-width: 451px) {
+  .nav1{ display: none; }
+  .nav2{ display: inline-block; }
+}
