--- a/src/components/Background/style.css
+++ b/src/components/Background/style.css
@@ -5,12 +5,12 @@ body {
   #particles-js1 {
     background: radial-gradient(circle, rgba(193, 196, 209, 1) 0%,
     rgba(3, 3, 29, 1) 100%);
-    height: 100vh;
+    height: 89vh;
     z-index: 0;
   }
   #welcome {
     position: absolute;
-    display: flex;
+    /* display: flex; */
     align-items: center;
     justify-content: center;
     top: 20%;
