--- a/src/components/skills/style.css
+++ b/src/components/skills/style.css
@@ -1,7 +1,6 @@
 .description{
     text-align: center;
     width: 800px;
-    margin-bottom: 30px;
     border-radius: 15px;
 background-color: white;
     padding: 10px;
@@ -11,7 +10,14 @@ background-color: white;
     -webkit-box-shadow: 0px 10px 33px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 10px 33px 0px rgba(0,0,0,0.75);
 }
-.descriptionintro{
-    color: rgba(0,0,0,0.75);
-    font-weight: 600;
+
+.icons{
+    font-size: xxx-large;
+    margin-right: 10px;
+}
+
+.icons2{
+    width: 50px;
+    padding-bottom: 25px;
+    margin-right: 10px;
 }
