--- a/src/components/mediaQueries/style.css
+++ b/src/components/mediaQueries/style.css
@@ -56,4 +56,29 @@
     #welcome {
         left: 15%;
       }
+      #particles-js1 {
+        height: 105vh;
+    }
+}
+
+@media screen and (max-width: 580px) {
+    .description{
+        width: 330px;
+    }
+    #welcome {
+        left: 15%;
+      }
+      #particles-js1 {
+        height: 115vh;
+    }
+}
+
+@media screen and (max-width: 385px) {
+    .description{
+        width: 300px;
+        text-align: left;
+    }
+    #particles-js1 {
+        height: 93vh;
+    }
 }
