--- a/src/components/mediaQueries/style2.css
+++ b/src/components/mediaQueries/style2.css
@@ -1,33 +1,71 @@
+@media screen and (min-width: 1350px) {
+    #particles-js {
+        height: 2550px;
+    }
+}
+
 @media screen and (max-width: 1350px) {
     #particles-js {
-        height: 2187px;
+        height: 2250px;
     }
 }
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1155px) {
+    .project2 {
+        top: 87%;
+    }
+    .project3 {
+        top: 145%;
+    }
+    .project4 {
+        top: 195%;
+    }
+    .project5 {
+        top: 245%;
+    }
     #particles-js {
-        height: 2200px;
-    }
+        height: 2150px;
+    } 
 }
 
+@media screen and (max-width: 992px) {
+    .project2 {
+        top: 103%;
+    }
+    .project3 {
+        top: 173%;
+    }
+    .project4 {
+        top: 225%;
+    }
+    .project5 {
+        top: 277%;
+    }
+    #particles-js {
+        height: 2115px;
+    }
+}
 
 @media screen and (max-width: 950px) {
     .project2 {
-        top: 83%;
+        top: 103%;
     }
     .project3 {
-        top: 137%;
+        top: 173%;
     }
     .project4 {
-        top: 177%;
+        top: 225%;
     }
     .project5 {
-        top: 220%;
+        top: 277%;
+    }
+    #particles-js {
+        height: 2115px;
     }
 }
 
 
-@media screen and (max-width: 769px) {
+@media screen and (max-width: 768px) {
     .projectdescription {
         width: 60%;
     }
@@ -38,19 +76,19 @@
         top: 20%;
     }
     .project2 {
-        top: 97%;
+        top: 125%;
     }
     .project3 {
-        top: 165%;
+        top: 220%;
     }
     .project4 {
-        top: 209%;
+        top: 285%;
     }
     .project5 {
-        top: 251%;
+        top: 345%;
     }
     #particles-js {
-        height: 2480px;
+        height: 2600px;
     }
     .button2 {
         margin-left: 80px;
@@ -59,7 +97,6 @@
         margin-top: -70px;
     }
 }
-
 
 @media screen and (max-width: 477px) {
     .projectdescription {
@@ -73,21 +110,43 @@
         margin-top: 21px;
     }
     .project2 {
-        top: 115%;
+        top: 143%;
     }
     .project3 {
-        top: 204%;
+        top: 260%;
     }
     .project4 {
-        top: 278%;
+        top: 355%;
     }
     .project5 {
-        top: 350%;
+        top: 450%;
     }
     #particles-js {
         height: 3600px;
     }
     .projectheading {
         left: 40%;
+    }
+}
+
+@media screen and (max-width: 441px) {
+    .button2 {
+        margin-top: -69px;
+        margin-left: 180px;
+    }
+    .project2 {
+        top: 165%;
+    }
+    .project3 {
+        top: 300%;
+    }
+    .project4 {
+        top: 400%;
+    }
+    .project5 {
+        top: 505%;
+    }
+    #particles-js {
+        height: 3960px;
     }
 }
