--- a/src/components/contactform/style.css
+++ b/src/components/contactform/style.css
@@ -45,7 +45,7 @@ text-shadow: 0px 1px 3px rgba(0,0,0,0.6);
     }
 
   .contact-info{
-      background-color: #5904c2;
+      background-color: darkblue;
       border-radius: 15px;
       flex: 0 1 40%;
       padding: 40px;
@@ -120,3 +120,9 @@ transition: .3s all ease-in-out;
  .fa{
 font-size: 25px;
  }
+
+.btn {
+  border-radius: 15%;
+  background-color: darkblue;
+  border-color: darkblue;
+}
