--- a/src/components/projects/style.css
+++ b/src/components/projects/style.css
@@ -72,6 +72,20 @@ text-align-last: center;
     display: flex;
 }
 
+.project6{
+    top: 275%;
+    padding-bottom: 50px;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
+    width: 100%;
+    border-radius: 15px;
+    overflow: hidden;
+    display: flex;
+}
+
 .projectheading{
     z-index: 1;
     position: absolute;
