--- a/src/components/mediaQueries/style3.css
+++ b/src/components/mediaQueries/style3.css
@@ -1,170 +1,176 @@
 @media screen and (max-width: 1400px) {
-    .contactform {
-        padding-left: 100px;
-    }
+  .contactform {
+    padding-left: 100px;
+  }
 }
 
 @media screen and (max-width: 1310px) {
-    .contactform {
-        padding-left: 130px;
-    }
-    #contact-container {
-        width: 1000px;
-    }
+  .contactform {
+    padding-left: 130px;
+  }
+  #contact-container {
+    width: 1000px;
+  }
 }
 
 @media screen and (max-width: 1100px) {
-    .contactform {
-        padding-left: 45px;
-    }
-    #contact-container {
-        width: 940px;
-    }
+  .contactform {
+    padding-left: 45px;
+  }
+  #contact-container {
+    width: 940px;
+  }
 }
 
 @media screen and (max-width: 1000px) {
-    #contact-container {
-        width: 800px;
-    }
-    .contactform {
-        padding-left: 85px;
-    }
+  #contact-container {
+    width: 800px;
+  }
+  .contactform {
+    padding-left: 85px;
+  }
 }
 
 @media screen and (max-width: 900px) {
-    #contact-container {
-        width: 650px;
-    }
-    form {
-        width: 260px;
-    }
-    .contactform {
-        padding-left: 120px;
-    }
+  #contact-container {
+    width: 650px;
+  }
+  form {
+    width: 260px;
+  }
+  .contactform {
+    padding-left: 120px;
+  }
 }
 
 @media screen and (max-width: 800px) {
-    #contact-container {
-        width: 650px;
-    }
-    form {
-        width: 260px;
-    }
-    .contactform {
-        padding-left: 75px;
-    }
+  #contact-container {
+    width: 650px;
+  }
+  form {
+    width: 260px;
+  }
+  .contactform {
+    padding-left: 75px;
+  }
 }
 
 @media screen and (max-width: 740px) {
-    #contact-container {
-        width: 500px;
-    }
-    form {
-        width: 170px;
-    }
-    .contactform {
-        padding-left: 115px;
-    }
-    .contact-info {
-        border-radius: 15px;
-        padding: 20px;
-    }
+  #contact-container {
+    width: 500px;
+  }
+  form {
+    width: 170px;
+  }
+  .contactform {
+    padding-left: 115px;
+  }
+  .contact-info {
+    border-radius: 15px;
+    padding: 20px;
+  }
 }
 
 @media screen and (max-width: 640px) {
-    #contact-container {
-        width: 500px;
-    }
-    form {
-        width: 170px;
-    }
-    .contactform {
-        padding-left: 74px;
-    }
-    .contact-info {
-        border-radius: 15px;
-    }
+  #contact-container {
+    width: 500px;
+  }
+  form {
+    width: 170px;
+  }
+  .contactform {
+    padding-left: 74px;
+  }
+  .contact-info {
+    border-radius: 15px;
+  }
 }
 
 @media screen and (max-width: 650px) {
-    #contact-container {
-        width: 500px;
-        overflow: visible;
-        flex-direction: column;
-    }
-    .contactform {
-        padding-left: 79px;
-        height: 135vh;
-    }
-    .contact-info {
-        border-radius: 15px;
-    }
-    form {
-        width: 395px;
-    }
-    #particles-js2 {
-        height: 150vh;
-    }
+  #contact-container {
+    width: 500px;
+    overflow: visible;
+    flex-direction: column;
+  }
+  .contactform {
+    padding-left: 79px;
+    height: 135vh;
+  }
+  .contact-info {
+    border-radius: 15px;
+  }
+  form {
+    width: 395px;
+  }
+  #particles-js2 {
+    height: 150vh;
+  }
 }
 
 @media screen and (max-width: 586px) {
-    #contact-container {
-        width: 500px;
-        overflow: visible;
-        flex-direction: column;
-    }
-    form {
-        width: 395px;
-    }
-    .contactform {
-        padding-left: 50px;
-        height: 135vh;
-    }
-    .contact-info {
-        border-radius: 15px;
-    }
+  #contact-container {
+    width: 500px;
+    overflow: visible;
+    flex-direction: column;
+  }
+  form {
+    width: 395px;
+  }
+  .contactform {
+    padding-left: 50px;
+    height: 135vh;
+  }
+  .contact-info {
+    border-radius: 15px;
+  }
 }
 
 @media screen and (max-width: 550px) {
-    #contact-container {
-        width: 380px;
-    }
-    form {
-        width: 310px;
-    }
-    .contactform {
-        padding-left: 80px;
-        height: 145vh;
-    }
+  #contact-container {
+    width: 380px;
+  }
+  form {
+    width: 310px;
+  }
+  .contactform {
+    padding-left: 80px;
+    height: 145vh;
+  }
 }
 
 @media screen and (max-width: 477px) {
-    .contactform {
-        padding-left: 60px;
-    }
+  .contactform {
+    padding-left: 60px;
+  }
 }
 
 @media screen and (max-width: 451px) {
-    .contactform {
-        padding-left: 40px;
-    }
+  .contactform {
+    padding-left: 40px;
+  }
 }
 
 @media screen and (max-width: 421px) {
-    #contact-container {
-        width: 280px;
-    }
-    .contactform {
-        padding-left: 45px;
-        height: 155vh;
-    }
-    form {
-        width: 240px;
-    }
-    p.sub-title {
-        font-size: 1rem;
-    }
-    span {
-        font-size: 1rem;
-    }
+  #contact-container {
+    width: 280px;
+  }
+  .contactform {
+    padding-left: 55px;
+    height: 155vh;
+  }
+  form {
+    width: 240px;
+  }
+  p.sub-title {
+    font-size: 1rem;
+  }
+  span {
+    font-size: 1rem;
+  }
+  .contactform {
+    justify-content: start;
+  }
+  #particles-js2 {
+    height: 133vh;
+  }
 }
